# webwright

./: .gitignore  ADVANCED-FEATURES.md  BROWSER-USE-RE-TEST.md  FEATURE-COMPARISON.md  IMPLEMENTATION-SUMMARY.md  INTEGRATION-COMPLETE.md  INTEGRATIONS.md  KITERUNNER-INSTALL.md  PLAYWRIGHT-STEALTH-INTEGRATION.md  QUICKSTART.md  RE-IMPLEMENTATION-SUMMARY.md  RE-INTEGRATION-ARCHITECTURE.md  RE-INTEGRATION-STATUS.md  RE-TEST-RESULTS.md  RE-TOOLS-TEST-PLAN.md  README.md  REVERSE-ENGINEERING-TOOLS.md  STEALTH-INTEGRATION-COMPLETE.md  capture-browser-use-api.ts  index.html  package-lock.json  package.json  start.sh  tailwind.config.js  test-database-standalone.js  test-database.js  test-login-persistence.ts  test-natural-language-re.ts  test-stealth-browser-use.ts  tsconfig.json  vitest.config.ts  webwright-http-bridge.js
.claude/: checkpoint-state.json  file-changes.json  health.json  project-index.md
.cursor/: mcp.json
cli/: Cargo.toml
cli/src/: commands.rs  connection.rs  flags.rs  main.rs  output.rs
electron/: database.js  main.js  preload.js
src/: App.tsx  index.ts  main.tsx
src/actions/: executor.ts
src/browser/: manager.ts
src/components/: DaemonStatus.tsx  Layout.tsx
src/core/: daemon.ts  protocol.ts  types.ts
src/dom/: snapshot.ts
src/lib/: re-orchestrator.ts  task-analyzer.ts  webwright-client.ts
src/mcp/: server.ts
src/pages/: DevToolsPage.tsx  NewTaskPage.tsx  RETaskPage.tsx  SessionsPage.tsx  SettingsPage.tsx
src/stream/: server.ts
src/types/: electron.d.ts
tests/: basic.test.ts  feature-validation.test.ts  setup.ts
(+11 files in other folders)
